--- a/css/style.css
+++ b/css/style.css
@@ -667,3 +667,14 @@
       line-height: 2.5rem;
     }
   }
+  .footer {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+    background-color: #2c3d4f;
+    color: #fff;
+  }
+  
+  .copyright {
+    background-color: #1a252f;
+  }
+  
